SHA1 should be a hex string, not raw bytes.
Fixed compile command SHA1.